--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0"
+    "latest": "^0.2.0",
+    "mongoose": "^7.0.0",
+    "node": "^19.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
